# GNG3DI

./: CMakeLists.txt  README.md  linux_compile.sh  linux_run.sh
assets/: GNG3DI_logo.psd
src/Core/: GNG3DConfig.cpp  GNG3DEdge.h  GNG3DHandler.cpp  GNG3DHandler.h  GNG3DInputMesh.cpp  GNG3DInputMesh.h  GNG3DList.h  GNG3DNode.cpp  GNG3DSimplifiedMesh.h  GNG3DVec.cpp  GNG3DVec.h
src/Widgets/: GNG3DIAboutWidget.cpp  GNG3DIAboutWidget.h  GNG3DIAboutWidget.ui  GNG3DIEmptyWidget.h  GNG3DIEmptyWidget.ui  GNG3DIHelpWidget.cpp  GNG3DIHelpWidget.ui  GNG3DIMainWidget.ui  GNG3DIOpenGLWidget.cpp  GNG3DIParameterInfoWidget.cpp  GNG3DIParameterInfoWidget.h  GNG3DIParameterInfoWidget.ui  GNG3DIParameterWidget.h
src/Windows/: GNG3DIWindow.cpp  GNG3DIWindow.ui
srcs/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  edge.fsh  edge.vsh  node.fsh  node.vsh
srcs/Core/: GNG3DConfig.h  GNG3DEdge.cpp  GNG3DHandler.h  GNG3DInputMesh.cpp  GNG3DList.cpp  GNG3DList.h  GNG3DNode.h  GNG3DResult.cpp  GNG3DResult.h  GNG3DSimplifiedMesh.cpp
srcs/Widgets/: GNG3DIEmptyWidget.cpp  GNG3DIHelpWidget.h  GNG3DILoadingWidget.cpp  GNG3DILoadingWidget.h  GNG3DILoadingWidget.ui  GNG3DIMainWidget.cpp  GNG3DIMainWidget.h  GNG3DIOpenGLWidget.cpp  GNG3DIOpenGLWidget.h  GNG3DIParameterWidget.cpp  GNG3DIParameterWidget.ui  GNG3DISettingsWidget.cpp  GNG3DISettingsWidget.h  GNG3DISettingsWidget.ui
srcs/Windows/: GNG3DIWindow.h
